# Habits

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  dbmanager.cpp  dbmanager.h  main.cpp  qtquickcontrols2.conf  resources.qrc
qml/: MainView.qml
qml/components/: HabitCard.qml  TaskCard.qml  TaskDelegate.qml  TaskModel.qml  Tasks.qml  TasksLayout.qml
qml/dialogs/: AddTaskDialog.qml  EditTaskDialog.qml
src/: habit.cpp  habit.h  habitmodel.cpp  habitmodel.h
